--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "@astrojs/vercel": "^9.0.2",
+    "@vercel/analytics": "^1.6.1",
     "@wix/data": "^1.0.350",
     "@wix/sdk": "^1.17.4",
     "astro": "^5.16.4",
